fix: remove overflow scroll from gameview

--- a/src/ui/root/games/games.module.css
+++ b/src/ui/root/games/games.module.css
@@ -74,7 +74,6 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 5px;
-  overflow: scroll;
 }
 
 .achievement {
